// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SectionContent should render with many props assigned 1`] = `
<section
  className="SectionContent"
  id="test-id"
>
  <h3
    className="title"
  />
  <div
    className="columnsContainer"
  >
    <div>
      <p>
        some multi-column test content
      </p>
    </div>
    <h6>
      OH YEAH!!
    </h6>
    <aside>
      Testing...
    </aside>
  </div>
</section>
`;

exports[`SectionContent should render with required props 1`] = `
<section
  className="SectionContent"
>
  <h3
    className="title"
  />
  <div
    className="columnsContainer"
  >
    <div>
      <p>
        some test content
      </p>
    </div>
  </div>
</section>
`;
